--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projeto Tabelas por Nome</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>RControl ✨ por Roberta</title>
+
+  <!-- Estilo principal -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Ícone da aba -->
+  <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
   <header>
-    <h1>Projeto: Uma tabela por nome</h1>
+    <!-- Logo visual -->
+    <img src="logo-RControl.png" alt="Logo RControl" class="logo" />
+    <h1>RControl • Gestão com Estilo 🌸</h1>
   </header>
 
   <main id="mainContent">
-    <div class="controls">
+    <section class="controls">
       <input type="text" id="personNameInput" placeholder="Nome da pessoa" autocomplete="off" />
-      <button id="addTableBtn" type="button">➕ Criar nova tabela</button>
-    </div>
+      <input type="text" id="productNameInput" placeholder="Produto" autocomplete="off" />
+      <input type="text" id="operationTypeInput" placeholder="Operação" autocomplete="off" />
+      <input type="number" id="operationQuantityInput" placeholder="Qtd" min="1" />
+      <input type="number" id="operationValueInput" placeholder="Valor unitário (R$)" min="0" step="0.01" />
+      <button type="button" id="addOperationBtn">➕ Criar tabela / Adicionar produto</button>
+    </section>
   </main>
+
+  <footer style="text-align:center; margin-top:3rem; color:#aaa;">
+    Criado com 💖 por Roberta
+  </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
